# qna_rag

./: .Dockerignore  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.codex/rules/: command-execution.rules  dependency-management.rules  docker.rules  environment.rules  filesystem.rules  git.rules  logging-observability.rules  migration.rules  safety.rules  testing-execution.rules
app/: context.py
app/api/: __init__.py
app/api/v1/: __init__.py  chats.py  events.py  health.py  messages.py
app/common_types/: __init__.py  models.py
app/config/: app.py  bootstrap.py  logging.py  settings.py  setup.py
app/data/: qna_rag.sqlite3
app/db/: connection.py  exceptions.py  init.py  schema.sql
app/domain/: __init__.py  enums.py  models.py  utils.py
app/envs/: example.env
app/events/: __init__.py  broker.py  in_memory.py
app/guardrails/: __init__.py  exceptions.py  input_guard.py  output_guard.py
app/knowledge/: __init__.py  indexer.py  loader.py  models.py  ranking.py  retriever.py  sync.py
app/llm/: __init__.py  client.py  exceptions.py  prompts.py  tool_executor.py  tools.py
app/repositories/: base.py  chats.py  events.py  knowledge.py  messages.py  utils.py
app/schemas/: __init__.py  base.py  chats.py  common.py  events.py  messages.py
app/services/: __init__.py  chat_service.py  context_service.py  message_service.py  notification_service.py
app/shared_types/: __init__.py  models.py
app/types/: __init__.py  models.py
docs/: architecture.md  production.md
envs/: example.env
k8s/: deployment.yaml  hpa.yaml  ingress.yaml.example  pvc.yaml  secret.yaml.example  service.yaml
knowledge/: vacation_policy.txt
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_api_errors.py  test_logging.py  test_rag.py  test_repositories_events.py  test_retriever.py  test_sse.py
tests/test_data/knowledge/: deployment_notes.md  python_basics.txt
tests/unit/: test_events.py  test_knowledge.py  test_message_service.py  test_ranking.py  test_retriever.py  test_services.py  test_tool_executor.py
