[project]
name = "qna-rag"
version = "0.1.0"
description = "Backend-only QnA agent API with FastAPI, SQLite, and Azure OpenAI tool calling."
readme = "README.md"
requires-python = ">=3.13,<4.0"
dynamic = ["dependencies"]
authors = [
    {name = "Daniil Yarshou", email = "daniil_yarshou@epam.com"}
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135.3"
gunicorn = "^25.3.0"
uvicorn = "^0.44.0"
pydantic-settings = "^2.13.1"
openai = "^2.30.0"
aiosqlite = "^0.22.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 125
indent-width = 4
exclude = [
    ".idea",
    ".venv",
    ".git",
    "alembic"
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
]
ignore = [
    "C901", # too complex
    "D401", # imperative mood
    "I"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]

[tool.isort]
profile = "black"
line_length = 125

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
]
